--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="project">
             <h3>Google</h3>
             <p class="project__description">
-              Software Developer
+              Software Engineer
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">Aug 2024 - Present</li>
@@ -126,7 +126,7 @@
             
 
             <p class="project__description">
-                Software Developer
+                Software Engineer
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">Aug 2021 - Oct 2022</li>
@@ -136,7 +136,7 @@
           <div class="project">
             <h3>Zemoso Technologies</h3>
             <p class="project__description">
-             Associate Software Developer 
+             Associate Software Engineer 
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">Jan 2020 - Aug 2021</li>
