--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <!-- About -->
       <div class="about center">
         <h1>Hi, I am <span class="about__name">Krishna Vamshi.</span></h1>
-        <h2 class="about__role">A Software Developer.</h2>
+        <h2 class="about__role">A Software Engineer.</h2>
         <p class="about__desc">
           A versatile Software Engineer with  delivering end-to-end solutions across the Software Development Life Cycle (SDLC). Proficient in Java, Spring Boot, and microservices architecture, I specialize in building scalable, secure, and cloud-native applications. My expertise spans both front-end and back-end technologies, including ReactJS, Angular, TypeScript, and HTML5, alongside robust backend development. I have designed and implemented RESTful and gRPC APIs, optimized database performance with PostgreSQL, MySQL, and MongoDB, and architected cloud solutions on AWS (EC2, S3, RDS, Lambda, EKS). Certified as an AWS Solutions Architect – Associate, I am also skilled in containerization with Docker, orchestration with Kubernetes, and automating CI/CD pipelines using Jenkins. Additionally, I have experience with messaging systems like RabbitMQ and Kafka, ensuring seamless communication in distributed environments.
         </p>
