--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
     <footer class="footer">
       <a
-        href="https://krishnavamshi1346.github.io/"
+        href="https://krishnavamshi1346.github.io/krishna_portfolio/"
         class="link footer__link"
       >
         Created By Krishna Vamshi
